[gd_scene format=3 uid="uid://bv7t4uda3bsjy"]

[ext_resource type="Script" uid="uid://byq8p6ty6la6x" path="res://Joel/scenes/container.gd" id="1_1to8g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1to8g"]
size = Vector2(84, 83)

[node name="Container" type="Node2D" unique_id=500065366]
script = ExtResource("1_1to8g")
metadata/_edit_use_anchors_ = true

[node name="ColorR" type="ColorRect" parent="." unique_id=832877793]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 90)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AreaContainer" type="Area2D" parent="ColorR" unique_id=208235576]
position = Vector2(45, 45)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorR/AreaContainer" unique_id=1298903140]
shape = SubResource("RectangleShape2D_1to8g")

[connection signal="area_entered" from="ColorR/AreaContainer" to="." method="_on_area_container_area_entered"]
[connection signal="area_exited" from="ColorR/AreaContainer" to="." method="_on_area_container_area_exited"]
